@@ -16,11 +16,9 @@
 package com.github.tomakehurst.wiremock.common;
 
 import com.google.common.base.Optional;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class JettySettingsTest {
 
@@ -62,12 +60,12 @@ public class JettySettingsTest {
 
     private void ensurePresent(Optional<Integer> optional) {
         assertTrue(optional.isPresent());
-        assertEquals(new Integer(number), optional.get());
+        assertEquals(Integer.valueOf(number), optional.get());
     }
 
     private void ensureLongPresent(Optional<Long> optional) {
         assertTrue(optional.isPresent());
-        assertEquals(new Long(longNumber), optional.get());
+        assertEquals(Long.valueOf(longNumber), optional.get());
     }
 
 }
